// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

<div
  style="width: 100%;"
>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 40%; height: 1.25rem;"
  />
</div>
`;

exports[`Render lines1 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

<div
  style="width: 100%;"
>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
</div>
`;

exports[`Render lines7 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

<div
  style="width: 100%;"
>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 40%; height: 1.25rem;"
  />
</div>
`;

exports[`Render width200 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 1rem;
}

<div
  style="width: 200px;"
>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 1.25rem;"
  />
  <div
    class="skeleton emotion-0"
    style="width: 40%; height: 1.25rem;"
  />
</div>
`;
